--- a/index.html
+++ b/index.html
@@ -19,6 +19,33 @@
 	<div id="mainDiv">
 		<div id="content">
 			<!--code-->
+			<div id="code">
+				<span class="comments">/**</span><br />
+				<span class="space"/><span class="comments">* 这里是爱你的居˙Ꙫ˙，当你每次打开这里能让你心情美丽就好了(ง •̀_•́)ง</span><br />
+				<span class="space"/><span class="comments">* 因为自己不善言辞也没有很胖胖的文采，就用这种超级无敌胖胖的方式给你说</span><br />
+				<span class="space"/><span class="comments">* 一些话 ⁄(⁄ ⁄•⁄ω⁄•⁄ ⁄)⁄。</span>
+				<span class="space"/><span class="comments">*/</span><br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"XiaoXianNv"</span>);<span class="space"/><span class="comments">//这里是一个男孩子</span><br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"XiaoTuanZi"</span>);<span class="space"/><span class="comments">//这里是一个女孩子</span><br />
+				<span class="comments">// Oct 3, 2017, I told you I love you. </span><br />
+				i.love(u);<span class="space"/><span class="comments">//我有一颗心，里面是你</span><br />
+				<span class="comments">// 很高兴, 你接受了，成了我的女朋友</span><br />
+				u.accepted();<br />
+				<span class="comments">// 从那以后，每天都在想着你</span><br />
+				i.miss(u);<br />
+				<span class="comments">// 我们经常都在幻想以后在一起的样子，会发生什么样的故事</span><br />
+				<span class="comments">// 所以我们要好好在一起哦(●'◡'●)ﾉ♥，会等到那一天的到来</span><br />
+				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<span class="space"/><span class="comments">//一直等待</span><br />
+				<span class="keyword">while</span> (isHesitate) {<br />
+				<span class="placeholder"/>i.waitFor(u);<br />
+				<span class="placeholder"/><span class="comments">// 我认为自己非常用心</span><br />
+				<span class="placeholder"/><span class="comments">// 希望你能感受到(´°̥̥̥̥̥̥̥̥ω°̥̥̥̥̥̥̥̥｀)</span><br />
+				<span class="placeholder"/>isHesitate = u.thinkOver();<br />
+				}<br />
+				<span class="comments">// 经过漫长的等待，我们会永远快乐的生活在一起ʅ（´◔౪◔）ʃ</span><br />
+				i.marry(u);<br />
+				i.liveHappilyWith(u);<br />
+			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
 				<div id="words">
