--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		}
 	</style>
 	<link href="css/default.css" type="text/css" rel="stylesheet">
+	<link rel="icon" href="ai.jpg" sizes="128*128">
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/garden.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
