--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script type="text/javascript" src="js/garden.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
 </head>
-
+ 
 <body>
 	<div id="mainDiv">
 		<div id="content">
@@ -24,25 +24,25 @@
 			
 			<div id="code">
 				<span class="comments">/**</span><br />
-				<span class="space"/><span class="comments">* 这里是爱你的居˙Ꙫ˙，当你每次打开这里能让你心情美丽就好了(ง •̀_•́)ง</span><br />
-				<span class="space"/><span class="comments">* 因为自己不善言辞也没有很胖胖的文采，就用这种超级无敌胖胖的方式给你说</span><br />
-				<span class="space"/><span class="comments">* 一些话 ⁄(⁄ ⁄•⁄ω⁄•⁄ ⁄)⁄。</span>
+				<span class="space"/><span class="comments">* 在这里先给小宝宝道个歉，说好的把文字改掉现在才弄(っ °Д °;)っ</span><br />
+				<span class="space"/><span class="comments">* 其实我知道马上要到14号了，情人节，所以宝宝就不要伤心难过了ฅʕ•̫͡•ʔฅ</span><br />
+				<span class="space"/><span class="comments">* 么么叽(*￣3￣)╭</span>
 				<span class="space"/><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"XiaoXianNv"</span>);<span class="space"/><span class="comments">//这里是一个男孩子</span><br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"XiaoTuanZi"</span>);<span class="space"/><span class="comments">//这里是一个女孩子</span><br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"XiaoXianNv"</span>);<span class="space"/><span class="comments">// 到现在宝宝跟宝宝在一起快半年了</span><br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"XiaoTuanZi"</span>);<span class="space"/><span class="comments">// 也看到了宝宝在慢慢改变自己</span><br />
 				<span class="comments">// Oct 3, 2017, I told you I love you. </span><br />
-				i.love(u);<span class="space"/><span class="comments">//我有一颗心，里面是你</span><br />
-				<span class="comments">// 很高兴, 你接受了，成了我的女朋友</span><br />
+				i.love(u);<span class="space"/><span class="comments">// 从小月亮🌙慢慢变成了小太阳🌞</span><br />
+				<span class="comments">// 从夜猫子变成了早睡早起的乖宝宝</span><br />
 				u.accepted();<br />
-				<span class="comments">// 从那以后，每天都在想着你</span><br />
+				<span class="comments">// 我们都在互相为对方改变着</span><br />
 				i.miss(u);<br />
-				<span class="comments">// 我们经常都在幻想以后在一起的样子，会发生什么样的故事</span><br />
-				<span class="comments">// 所以我们要好好在一起哦(●'◡'●)ﾉ♥，会等到那一天的到来</span><br />
-				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<span class="space"/><span class="comments">//一直等待</span><br />
+				<span class="comments">// 变成更好的样子，更成熟一点点</span><br />
+				<span class="comments">// 之后我们都工作了，平时只要互相惦记着对方就可以了</span><br />
+				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<span class="space"/><span class="comments">// 不用太多了顾虑，就跟现在一样平平淡淡</span><br />
 				<span class="keyword">while</span> (isHesitate) {<br />
 				<span class="placeholder"/>i.waitFor(u);<br />
-				<span class="placeholder"/><span class="comments">// 我认为自己非常用心</span><br />
-				<span class="placeholder"/><span class="comments">// 希望你能感受到(´°̥̥̥̥̥̥̥̥ω°̥̥̥̥̥̥̥̥｀)</span><br />
+				<span class="placeholder"/><span class="comments">// 用不了多久就可以慢慢缩短我们的距离👀</span><br />
+				<span class="placeholder"/><span class="comments">// 好了祝宝宝情人节快乐❤️‍</span><br />
 				<span class="placeholder"/>isHesitate = u.thinkOver();<br />
 				}<br />
 				<span class="comments">// 经过漫长的等待，我们会永远快乐的生活在一起ʅ（´◔౪◔）ʃ</span><br />
