--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				i.miss(u);<br />
 				<span class="comments">// 变成更好的样子，更成熟一点点</span><br />
 				<span class="comments">// 之后我们都工作了，平时只要互相惦记着对方就可以了</span><br />
-				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<span class="space"/><span class="comments">// 不用太多了顾虑，就跟现在一样平平淡淡</span><br />
+				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<span class="space"/><span class="comments">// 不用太多的顾虑，就跟现在一样平平淡淡</span><br />
 				<span class="keyword">while</span> (isHesitate) {<br />
 				<span class="placeholder"/>i.waitFor(u);<br />
 				<span class="placeholder"/><span class="comments">// 用不了多久就可以慢慢缩短我们的距离👀</span><br />
