--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<span class="keyword">while</span> (isHesitate) {<br />
 				<span class="placeholder"/>i.waitFor(u);<br />
 				<span class="placeholder"/><span class="comments">// 用不了多久就可以慢慢缩短我们的距离👀</span><br />
-				<span class="placeholder"/><span class="comments">// 好了祝宝宝情人节快乐❤️‍</span><br />
+				<span class="placeholder"/><span class="comments">// ❤️‍</span><br />
 				<span class="placeholder"/>isHesitate = u.thinkOver();<br />
 				}<br />
 				<span class="comments">// 经过漫长的等待，我们会永远快乐的生活在一起ʅ（´◔౪◔）ʃ</span><br />
