--- a/index.html
+++ b/index.html
@@ -24,30 +24,31 @@
 			
 			<div id="code">
 				<span class="comments">/**</span><br />
-				<span class="space"/><span class="comments">* 在这里先给小宝宝道个歉，说好的把文字改掉现在才弄(っ °Д °;)っ</span><br />
-				<span class="space"/><span class="comments">* 其实我知道马上要到14号了，情人节，所以宝宝就不要伤心难过了ฅʕ•̫͡•ʔฅ</span><br />
-				<span class="space"/><span class="comments">* 么么叽(*￣3￣)╭</span>
+				<span class="space"/><span class="comments">* 从没有一件事像我想你般自然</span><br />
+				<span class="space"/><span class="comments">* 你是我的秋水伊人</span><br />
+				<span class="space"/><span class="comments">* 每天晚上我的内心一片空白</span>
 				<span class="space"/><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"XiaoXianNv"</span>);<span class="space"/><span class="comments">// 到现在宝宝跟宝宝在一起快半年了</span><br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"XiaoTuanZi"</span>);<span class="space"/><span class="comments">// 也看到了宝宝在慢慢改变自己</span><br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"XiaoXianNv"</span>);<span class="space"/><span class="comments">// 梦里我辗转反侧</span><br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"XiaoTuanZi"</span>);<span class="space"/><span class="comments">// 只为寻找你的身影</span><br />
 				<span class="comments">// Oct 3, 2017, I told you I love you. </span><br />
-				i.love(u);<span class="space"/><span class="comments">// 从小月亮🌙慢慢变成了小太阳🌞</span><br />
-				<span class="comments">// 从夜猫子变成了早睡早起的乖宝宝</span><br />
+				i.love(u);<span class="space"/><span class="comments">// 没有人和一件事比这更重要</span><br />
+				<span class="comments">// 我的魂早已追随你而去</span><br />
 				u.accepted();<br />
-				<span class="comments">// 我们都在互相为对方改变着</span><br />
+				<span class="comments">// 对你日月想念</span><br />
 				i.miss(u);<br />
-				<span class="comments">// 变成更好的样子，更成熟一点点</span><br />
-				<span class="comments">// 之后我们都工作了，平时只要互相惦记着对方就可以了</span><br />
-				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<span class="space"/><span class="comments">// 不用太多的顾虑，就跟现在一样平平淡淡</span><br />
+				<span class="comments">// 世界彷佛成为你的衬托</span><br />
+				<span class="comments">// 我无心关注其它</span><br />
+				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<span class="space"/><span class="comments">// 你是我朝思暮想的那个人</span><br />
 				<span class="keyword">while</span> (isHesitate) {<br />
 				<span class="placeholder"/>i.waitFor(u);<br />
-				<span class="placeholder"/><span class="comments">// 用不了多久就可以慢慢缩短我们的距离👀</span><br />
-				<span class="placeholder"/><span class="comments">// ❤️‍</span><br />
+				<span class="placeholder"/><span class="comments">// 我的眼里再也看不到别的</span><br />
+				<span class="placeholder"/><span class="comments">// ???</span><br />
 				<span class="placeholder"/>isHesitate = u.thinkOver();<br />
 				}<br />
-				<span class="comments">// 经过漫长的等待，我们会永远快乐的生活在一起ʅ（´◔౪◔）ʃ</span><br />
+				<span class="comments">// 没有你 我是不完整的</span><br />
 				i.marry(u);<br />
 				i.liveHappilyWith(u);<br />
+				<em>——2018.8.17</em>
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
